ProfileMenu and RankingMenu works with network now